--- a/src/scss/color.scss
+++ b/src/scss/color.scss
@@ -14,4 +14,17 @@
     --pagination-color: var(--chakra-colors-purple-400);
    --pagination-hover-color: var(--chakra-colors-purple-300);
    --pagination-disabled-color: #d4d4d4;
+
+   --gradient-01: linear-gradient(33deg,  #6DE195, #C4E759);
+   --gradient-02: linear-gradient(33deg,   #41C7AF, #54E38E);
+   --gradient-03: linear-gradient(33deg,  #99E5A2, #D4FC78);
+   --gradient-04: linear-gradient(33deg,  #ABC7FF, #C1E3FF);
+   --gradient-05: linear-gradient(33deg,  #6CACFF, #8DEBFF);
+   --gradient-06: linear-gradient(33deg,  #5583EE, #41D8DD);
+   --gradient-07: linear-gradient(33deg,  #A16BFE,  #DEB0DF);
+   --gradient-08: linear-gradient(33deg,  #D279EE, #F8C390);
+   --gradient-09: linear-gradient(33deg,  #F78FAD, #FDEB82);
+   --gradient-10: linear-gradient(33deg,  #BC3D2F, #A16BFE);
+   --gradient-11: linear-gradient(33deg,   #A43AB2, #E13680);
+   --gradient-12: linear-gradient(33deg,   #9D2E7D, #E16E93);
 }
